refactors to add user to throw using buttons

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="choice-buttons">
+        <button id="rock-btn">Throw Rock</button>
+        <button id="paper-btn">Throw Paper</button>
+        <button id="scissors-btn">Throw Scissors</button>
+    </div>
+    <div id="results"></div>
+    <div id="current-score"></div>
+<script src="script.js"></script>
 </body>
 </html>
